force-app/main/default/objects/DLLNewCo_Approval__c/DLLNewCo_Approval__c.object-meta.xml
<CustomObject>
    <label>DLLNewCo Approval</label>
    <nameField>
        <displayFormat>DLLAPPROVAL-{000000}</displayFormat>
        <label>DLLNewCo Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DLLNewCo Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>