force-app/main/default/objects/DLLNewCo_Approval__c/fields/Approve_Reject_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approve_Reject_Comments__c</fullName>
    <label>Approve/Reject Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>