force-app/main/default/objects/DLLNewCo_Approval__c/fields/Change_Set_name__c.field-meta.xml
<CustomField>
    <fullName>Change_Set_name__c</fullName>
    <inlineHelpText>Give the Change Set Name used for code migration</inlineHelpText>
    <label>Change Set name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>