force-app/main/default/objects/DLLNewCo_Approval__c/fields/CLS_Support_Ticket__c.field-meta.xml
<CustomField>
    <fullName>CLS_Support_Ticket__c</fullName>
    <label>CLS Support Ticket</label>
    <length>10</length>
    <type>Text</type>
</CustomField>