force-app/main/default/objects/DLLNewCo_Approval__c/fields/Move_Changes__c.field-meta.xml
<CustomField>
    <fullName>Move_Changes__c</fullName>
    <label>Move Changes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DEV TO ACCEPTANCE</fullName>
            </value>
            <value>
                <fullName>DEV TO PRODUCTION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>