force-app/main/default/objects/DLLNewCo_Approval__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEW</fullName>
            </value>
            <value>
                <fullName>APPROVED</fullName>
            </value>
            <value>
                <fullName>REJECTED</fullName>
            </value>
            <value>
                <fullName>SUBMITTED</fullName>
                <isActive>false</isActive>
                <label>SUBMITTED</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>