force-app/main/default/objects/DLLNewCo_Approval__c/fields/Task_Description__c.field-meta.xml
<CustomField>
    <fullName>Task_Description__c</fullName>
    <description>Describe the task</description>
    <inlineHelpText>Describe the task</inlineHelpText>
    <label>Task Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>