force-app/main/default/objects/DLLNewCo_Approval__c/fields/Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Name__c</fullName>
    <description>Provide Task Name</description>
    <inlineHelpText>Provide Task Name</inlineHelpText>
    <label>Task Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>