force-app/main/default/objects/DLLNewCo_Approval__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Task_Name__c</columns>
    <columns>Task_Description__c</columns>
    <columns>Move_Changes__c</columns>
    <columns>CLS_Support_Ticket__c</columns>
    <columns>Status__c</columns>
    <columns>Approve_Reject_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>